# D4.3_Classification_toolbox

./: .gitignore  .gitlab-ci.yml  CmeansModel_test.ipynb  CmeansPython.py  README.md  clustering_examples.ipynb  environment.yml  hackathon_rpy2.py  meta.yaml  requirements.txt  rpy2Models_test.ipynb  setup.cfg  setup.py
.ipynb_checkpoints/: rpy2Models_test-checkpoint.ipynb
Estimators/: cmeans_python.py
LICENCE/: licence.txt
conda-recipe/: build.sh  meta.yaml
docs/: GUIDE_clustering_examples.ipynb  GUIDE_data_preparation_data.ipynb  fuzzy_cluster_env_from-history.yml
docs/guides/: GUIDE_clustering_examples.ipynb  GUIDE_clustering_examples_cmeansCRAN.ipynb  GUIDE_clustering_examples_fclustFKM.ipynb  GUIDE_clustering_examples_fclustFKMgkb.ipynb  GUIDE_different_pipelines.ipynb
fuzzy_water_clustering/: __init__.py  apply_model.py  cluster_scoring.py  cmeans_cran.py  cmeans_python.py  netcdf_wrapper.py  reporting_utilities.py  sample_netcdf.py  serialize_models.py  spectral_library_generator.py  xarray_wrapper.py
fuzzy_water_clustering/estimators/: __init__.py  cmeans_python.py
fuzzy_water_clustering/estimators/.ipynb_checkpoints/: CmeansPython-checkpoint.py
fuzzy_water_clustering/fuzzy_water_clustering.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fuzzy_water_clustering/utils/: __init__.py  apply_model.py  cluster_scoring.py  spectral_library_generator.py
test/: smoke_test.py  test_clustering.py  test_estimators.py
test/data/: eraint_uvz_small.nc
utils/: apply_model.py  serialize_models.py  spectral_library_generator.py
