[metadata]
name = fuzzy_water_clustering_anla
version = 0.0.1
author = Angus Laurenson
author_email = anla@pml.ac.uk
description = A small package for fuzzy clustering of remote reflectance spectra
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.rsg.pml.ac.uk/Angus/fuzzy_classifcation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
