[metadata]
name = fuzzy-water
version = 0.1.2
author = Angus Laurenson
author_email = anla@pml.ac.uk
description = fuzzy clustering with out-of-core methods for large remote sensing datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.rsg.pml.ac.uk/Angus/fuzzy_classifcation
project_urls =
    Bug Tracker = https://gitlab.rsg.pml.ac.uk/Angus/fuzzy_classifcation/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

install_requires = 
    xarray
    netcdf4
    dask
    scikit-learn
    scikit-fuzzy

[options.packages.find]
where = .